cleanud up controller